--- a/DirectXTexSharpApp/DirectXTexSharpApp.csproj
+++ b/DirectXTexSharpApp/DirectXTexSharpApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-      <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework> 
       <Platforms>x64</Platforms>
   </PropertyGroup>
 
@@ -14,5 +14,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="DirectXTexSharp">
+      <HintPath>..\DirectXTexSharp\DirectXTexSharp\bin\x64\Release\DirectXTexSharp.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
